k8s-deployment-candi-prod-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ddcandi

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: ddcandi-parser
  namespace: ddcandi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddcandi-parser
  template:
    metadata:
      labels:
        app: ddcandi-parser
    spec:
      containers:
        - name: ddcandi-parser
          image: armdocker.rnd.ericsson.se/stsi/ddcandi-parser:0.0.${env.BUILD_ID}
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: parser-volume
              mountPath: "/app/uploads"
      restartPolicy: Always
      volumes:
        - name: parser-volume
          persistentVolumeClaim:
            claimName: ddcandi-pvc

---

kind: Service
apiVersion: v1
metadata:
  name: ddcandi-parser
  namespace: ddcandi
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      nodePort: 32301
  selector:
    app: ddcandi-parser

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: ddcandi-backend
  namespace: ddcandi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddcandi-backend
  template:
    metadata:
      labels:
        app: ddcandi-backend
    spec:
      containers:
        - name: ddcandi-backend
          image: armdocker.rnd.ericsson.se/stsi/ddcandi-backend:0.0.${env.BUILD_ID}
          imagePullPolicy: Always
          ports:
            - containerPort: 2000
          volumeMounts:
            - name: backend-volume
              mountPath: "/app/uploads"
      restartPolicy: Always
      volumes:
        - name: backend-volume
          persistentVolumeClaim:
            claimName: ddcandi-pvc

---

kind: Service
apiVersion: v1
metadata:
  name: ddcandi-backend
  namespace: ddcandi
spec:
  type: LoadBalancer
  ports:
    - name: backend-main
      protocol: TCP
      port: 2000
      targetPort: 2000
      nodePort: 32201
    - name: backend-parse
      protocol: TCP
      port: 2001
      targetPort: 2001
      nodePort: 32202
    - name: backend-database
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 32203
  selector:
    app: ddcandi-backend

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: ddcandi-frontend
  namespace: ddcandi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddcandi-frontend
  template:
    metadata:
      labels:
        app: ddcandi-frontend
    spec:
      containers:
        - name: ddcandi-frontend
          image: armdocker.rnd.ericsson.se/stsi/ddcandi-frontend:0.0.${env.BUILD_ID}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      restartPolicy: Always

---

kind: Service
apiVersion: v1
metadata:
  name: ddcandi-frontend
  namespace: ddcandi
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 32101
  selector:
    app: ddcandi-frontend

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ddcandi-frontend
  namespace: ddcandi
spec:
  rules:
  - host: ddcandi.cech025.rnd.gic.ericsson.se
    http:
      paths:
      - backend:
          serviceName: ddcandi-frontend
          servicePort: 3000
        path: /
        pathType: ImplementationSpecific
